# activity-frames

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  parser_request.md
.github/workflows/: test.yml
examples/: README.md  agent_context.py  daily_standup.py
src/activity_frames/: __init__.py  _time.py  capture.py  cli.py  communications.py  db.py  emit.py  enrich.py  entities.py  frames.py  mcp_server.py  patterns.py  sessionize.py
tests/: conftest.py  test_communications.py  test_enrich.py  test_entities.py  test_frames_emit.py  test_mcp.py  test_multidevice.py  test_robustness.py  test_sessionize.py
