[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "activity-frames"
version = "0.1.0"
description = "Episodic memory for AI agents: compile raw screen capture into structured, deterministic activity frames."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Nossa Iyamu" }]
keywords = [
    "ai-agents", "mcp", "screenpipe", "episodic-memory", "context",
    "screen-activity", "agent-memory", "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = ["pytest>=7", "PyYAML>=6.0"]

[project.scripts]
aframes = "activity_frames.cli:main"

[project.urls]
Homepage = "https://github.com/nossa-y/activity-frames"
Repository = "https://github.com/nossa-y/activity-frames"
Issues = "https://github.com/nossa-y/activity-frames/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/activity_frames"]

[tool.pytest.ini_options]
testpaths = ["tests"]
